--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- BRANDBOT: Updated all meta tags for Island Drains & Excavation -->
-    <title>Island Drains & Excavation – Professional Drain Services & Excavation | Victoria, BC</title>
-    <meta name="description" content="Professional drain cleaning, excavation and excavation services serving Victoria and Southern Vancouver Island. Licensed and insured.">
-    <meta name="application-name" content="Island Drains">
-    <meta name="apple-mobile-web-app-title" content="Island Drains">
-    <meta name="msapplication-TileColor" content="#0C4A6E">
-    <meta name="theme-color" content="#0C4A6E">
-    <link rel="canonical" href="https://islanddrainsandexcavation.ca/index.html" />
-    <meta property="og:site_name" content="Island Drains & Excavation">
-    <meta property="og:title" content="Island Drains & Excavation – Professional Drain Services & Excavation | Victoria, BC" />
-    <meta property="og:description" content="Professional drain cleaning, excavation and excavation services serving Victoria and Southern Vancouver Island. Licensed and insured." />
-    <meta property="og:url" content="https://islanddrainsandexcavation.ca/index.html" />
-    <meta property="og:image" content="https://islanddrainsandexcavation.ca/images/ide-hero-thumbnail.jpg" />
+    <!-- BRANDBOT: Updated all meta tags for Jaden's Excavation & Landscaping -->
+    <title>Jaden's Excavation & Landscaping – Professional Excavation & Landscaping Services | Metro Vancouver, BC</title>
+    <meta name="description" content="Professional excavation and landscaping services serving Metro Vancouver and Greater Vancouver Area. Licensed and insured.">
+    <meta name="application-name" content="Jaden's Excavation">
+    <meta name="apple-mobile-web-app-title" content="Jaden's Excavation">
+    <meta name="msapplication-TileColor" content="#265D2D">
+    <meta name="theme-color" content="#265D2D">
+    <link rel="canonical" href="https://jadensexcavation.ca/index.html" />
+    <meta property="og:site_name" content="Jaden's Excavation & Landscaping">
+    <meta property="og:title" content="Jaden's Excavation & Landscaping – Professional Excavation & Landscaping Services | Metro Vancouver, BC" />
+    <meta property="og:description" content="Professional excavation and landscaping services serving Metro Vancouver and Greater Vancouver Area. Licensed and insured." />
+    <meta property="og:url" content="https://jadensexcavation.ca/index.html" />
+    <meta property="og:image" content="https://jadensexcavation.ca/images/jadenlogo.png" />
     <meta property="og:type" content="website" />
     <link rel="icon" type="image/jpeg" href="images/thumbnail.jpeg">
     <link rel="stylesheet" href="css/styles.css">
@@ -24,44 +24,44 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&display=swap" rel="stylesheet">
-    <!-- BRANDBOT: Updated structured data for Island Drains & Excavation -->
+    <!-- BRANDBOT: Updated structured data for Jaden's Excavation & Landscaping -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "Island Drains & Excavation Ltd.",
-      "alternateName": "Island Drains",
-      "url": "https://islanddrainsandexcavation.ca",
-      "logo": "https://islanddrainsandexcavation.ca/images/ide-logo-full.svg",
-      "description": "Professional drain cleaning, excavation and excavation services serving Victoria and Southern Vancouver Island.",
+      "name": "Jaden's Excavation & Landscaping Ltd.",
+      "alternateName": "Jaden's Excavation",
+      "url": "https://jadensexcavation.ca",
+      "logo": "https://jadensexcavation.ca/images/jadenlogo.png",
+      "description": "Professional excavation and landscaping services serving Metro Vancouver and Greater Vancouver Area.",
       "contactPoint": [{
         "@type": "ContactPoint",
-        "telephone": "+1-250-818-5611",
+        "telephone": "+1-250-555-0199",
         "contactType": "customer service"
       }],
       "address": {
         "@type": "PostalAddress",
-        "addressLocality": "Victoria",
+        "addressLocality": "Vancouver",
         "addressRegion": "BC",
         "addressCountry": "CA"
       },
       "areaServed": [
-        "Victoria, BC",
-        "Southern Vancouver Island"
+        "Metro Vancouver, BC",
+        "Greater Vancouver Area"
       ],
       "serviceType": [
-        "Drain cleaning",
         "Excavation services",
-        "Drain services",
-        "Residential drainage",
-        "Commercial excavation"
+        "Landscaping services",
+        "Site preparation",
+        "Residential excavation",
+        "Commercial landscaping"
       ],
       "priceRange": "$$",
       "openingHours": "Mo-Fr 08:00-17:00"
     }
     </script>
     <style>
-        /* BRANDBOT: Updated hero background for Island Drains theme */
+        /* BRANDBOT: Updated hero background for Jaden's Excavation theme */
         .hero {
             background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('images/herobgfinalide.png');
             background-size: cover;
@@ -276,9 +276,9 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                                    <!-- BRANDBOT: Updated logo for Island Drains & Excavation -->
-                <img src="images/idelogocropped.PNG" alt="Island Drains & Excavation Ltd. - Professional drainage and excavation services Victoria BC" class="logo-image">
-                    <span class="logo-text">Island Drains & Excavation Ltd.</span>
+                                    <!-- BRANDBOT: Updated logo for Jaden's Excavation & Landscaping -->
+                <img src="images/jadenlogo.png" alt="Jaden's Excavation & Landscaping Ltd. - Professional excavation and landscaping services Metro Vancouver BC" class="logo-image">
+                    <span class="logo-text">Jaden's Excavation & Landscaping Ltd.</span>
                 </a>
             </div>
             <nav>
@@ -286,14 +286,13 @@
                     <li><a href="index.html" class="active">Home</a></li>
                     <li class="dropdown"> 
                         <a href="services.html">Services</a> 
-                        <!-- BRANDBOT: Updated service menu for Island Drains & Excavation -->
+                        <!-- BRANDBOT: Updated service menu for Jaden's Excavation & Landscaping -->
                         <ul class="dropdown-menu">
                             <li><a href="services.html#excavation">Excavation</a></li>
-                            <li><a href="services.html#lift-station">Lift Station Supply & Install</a></li>
-                                                    <li><a href="services.html#perimeter-drains">Perimeter Drains</a></li>
-                        <li><a href="services.html#structure-demolition">Structure Demolition</a></li>
-                        <li><a href="services.html#retaining-walls">Retaining Walls</a></li>
-                    </ul>
+                            <li><a href="services.html#landscaping">Landscaping</a></li>
+                            <li><a href="services.html#site-preparation">Site Preparation</a></li>
+                            <li><a href="services.html#retaining-walls">Retaining Walls</a></li>
+                        </ul>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -308,10 +307,10 @@
 
     <section id="home" class="hero">
         <div class="container">
-            <!-- BRANDBOT: Updated hero content for Island Drains & Excavation -->
+            <!-- BRANDBOT: Updated hero content for Jaden's Excavation & Landscaping -->
             <div class="hero-content">
-                <h1>Professional Drain & Excavation Services</h1>
-                <p>Serving Victoria and Southern Vancouver Island with reliable, professional service</p>
+                <h1>Professional Excavation & Landscaping Services</h1>
+                <p>Serving Metro Vancouver and Greater Vancouver Area with reliable, professional service</p>
                 <div class="cta-buttons">
                     <a href="services.html" class="btn btn-primary">Our Services</a>
                     <a href="#contact" class="btn btn-secondary">Get Free Quote</a>
@@ -322,10 +321,10 @@
 
     <section id="services" class="services">
         <div class="container">
-            <!-- BRANDBOT: Updated services section for Island Drains & Excavation -->
+            <!-- BRANDBOT: Updated services section for Jaden's Excavation & Landscaping -->
             <div class="section-header">
                 <h2>Our Professional Services</h2>
-                <p>Expert drain and excavation solutions for Victoria and Southern Vancouver Island</p>
+                <p>Expert excavation and landscaping solutions for Metro Vancouver and Greater Vancouver Area</p>
             </div>
             
             <div class="services-grid">
@@ -334,35 +333,26 @@
                         <i class="fas fa-truck"></i>
                     </div>
                     <h3>Excavation</h3>
-                    <p>Professional excavation services for residential and commercial projects throughout Victoria and Southern Vancouver Island.</p>
+                    <p>Professional excavation services for residential and commercial projects throughout Metro Vancouver and Greater Vancouver Area.</p>
                     <a href="services.html#excavation" class="btn-learn-more">View Excavation Services</a>
                 </div>
 
                 <div class="service-card">
                     <div class="icon">
-                        <i class="fas fa-cogs"></i>
+                        <i class="fas fa-seedling"></i>
                     </div>
-                    <h3>Lift Station Supply & Install</h3>
-                    <p>Complete lift station solutions including supply, installation, and maintenance for wastewater management systems.</p>
-                    <a href="services.html#lift-station" class="btn-learn-more">Learn About Lift Stations</a>
+                    <h3>Landscaping</h3>
+                    <p>Complete landscaping solutions including design, installation, and maintenance for residential and commercial properties.</p>
+                    <a href="services.html#landscaping" class="btn-learn-more">Learn About Landscaping</a>
                 </div>
 
                 <div class="service-card">
                     <div class="icon">
-                        <i class="fas fa-water"></i>
+                        <i class="fas fa-tools"></i>
                     </div>
-                    <h3>Perimeter Drains</h3>
-                    <p>Expert perimeter drain installation and maintenance to protect your property from water damage and flooding.</p>
-                    <a href="services.html#perimeter-drains" class="btn-learn-more">Perimeter Drain Services</a>
-                </div>
-
-                <div class="service-card">
-                    <div class="icon">
-                        <i class="fas fa-hammer"></i>
-                    </div>
-                    <h3>Structure Demolition</h3>
-                    <p>Safe and efficient structure demolition services for residential and commercial properties.</p>
-                    <a href="services.html#structure-demolition" class="btn-learn-more">Demolition Services</a>
+                    <h3>Site Preparation</h3>
+                    <p>Expert site preparation services including clearing, grading, and foundation preparation for new construction projects.</p>
+                    <a href="services.html#site-preparation" class="btn-learn-more">Site Preparation Services</a>
                 </div>
 
                 <div class="service-card">
@@ -385,26 +375,26 @@
             </div>
             <div class="contact-content">
                 <div class="contact-info">
-                    <!-- BRANDBOT: Updated contact information for Island Drains & Excavation -->
+                    <!-- BRANDBOT: Updated contact information for Jaden's Excavation & Landscaping -->
                     <div class="info-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h3>Service Area</h3>
-                            <p>Victoria & Southern Vancouver Island</p>
+                            <p>Metro Vancouver & Greater Vancouver Area</p>
                         </div>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-phone-alt"></i>
                         <div>
                             <h3>Phone</h3>
-                            <p><a href="tel:2508185611">(250) 818-5611</a></p>
+                            <p><a href="tel:2505550199">(250) 555-0199</a></p>
                         </div>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h3>Email</h3>
-                            <p><a href="mailto:info@islanddrainsandexcavation.ca">info@islanddrainsandexcavation.ca</a></p>
+                            <p><a href="mailto:info@jadensexcavation.ca">info@jadensexcavation.ca</a></p>
                         </div>
                     </div>
                     <!-- BRANDBOT: Removed social media links per user request -->
@@ -416,12 +406,12 @@
     <footer>
         <div class="container">
             <div class="footer-content">
-                <!-- BRANDBOT: Updated footer logo for Island Drains & Excavation -->
+                <!-- BRANDBOT: Updated footer logo for Jaden's Excavation & Landscaping -->
                 <div class="footer-logo">
                     <a href="index.html">
-                        <img src="images/idelogo.png" alt="Island Drains & Excavation Ltd. - Victoria BC drainage and excavation company" class="footer-main-logo">
+                        <img src="images/jadenlogo.png" alt="Jaden's Excavation & Landscaping Ltd. - Metro Vancouver BC excavation and landscaping company" class="footer-main-logo">
                     </a>
-                    <!-- BRANDBOT: Removed CCIB partnership logo (not applicable for Island Drains) -->
+                    <!-- BRANDBOT: Removed CCIB partnership logo (not applicable for Jaden's Excavation) -->
                 </div>
                 <div class="footer-links">
                     <h3>Quick Links</h3>
@@ -431,27 +421,26 @@
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
-                <!-- BRANDBOT: Updated footer services for Island Drains & Excavation -->
+                <!-- BRANDBOT: Updated footer services for Jaden's Excavation & Landscaping -->
                 <div class="footer-services">
                     <h3><a href="services.html">Our Services</a></h3>
                     <ul>
                         <li><a href="services.html#excavation">Excavation</a></li>
-                        <li><a href="services.html#lift-station">Lift Station Supply & Install</a></li>
-                        <li><a href="services.html#perimeter-drains">Perimeter Drains</a></li>
-                        <li><a href="services.html#structure-demolition">Structure Demolition</a></li>
+                        <li><a href="services.html#landscaping">Landscaping</a></li>
+                        <li><a href="services.html#site-preparation">Site Preparation</a></li>
                         <li><a href="services.html#retaining-walls">Retaining Walls</a></li>
                     </ul>
                 </div>
                 <div class="footer-contact">
                     <h3>Contact Info</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> Victoria & Southern Vancouver Island</p>
-                    <p><i class="fas fa-phone-alt"></i> <a href="tel:2508185611">(250) 818-5611</a></p>
-                    <p><i class="fas fa-envelope"></i> <a href="mailto:info@islanddrainsandexcavation.ca">info@islanddrainsandexcavation.ca</a></p>
+                    <p><i class="fas fa-map-marker-alt"></i> Metro Vancouver & Greater Vancouver Area</p>
+                    <p><i class="fas fa-phone-alt"></i> <a href="tel:2505550199">(250) 555-0199</a></p>
+                    <p><i class="fas fa-envelope"></i> <a href="mailto:info@jadensexcavation.ca">info@jadensexcavation.ca</a></p>
                 </div>
             </div>
-            <!-- BRANDBOT: Updated footer copyright for Island Drains & Excavation -->
+            <!-- BRANDBOT: Updated footer copyright for Jaden's Excavation & Landscaping -->
             <div class="footer-bottom">
-                <p>&copy; 2025 Island Drains & Excavation Ltd. All Rights Reserved.</p>
+                <p>&copy; 2025 Jaden's Excavation & Landscaping Ltd. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
